--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     
     <h1>Hello World</h1>
+    <h2>Hello World</h2>
+    <h3>Hello World</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, inventore veniam ullam ipsum saepe et! Repellat hic magni, iusto iure natus alias quod quos impedit illo, error eveniet delectus provident?</p>
     
 </body>
